src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  replicas: ${environmentScale}
  strategy:
    rollingUpdate:
      maxSurge: ${environmentScale}
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: ${project.artifactId}
  template:
    metadata:
      labels:
        app: ${project.artifactId}
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - experience-frontend
                topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: gcr.io-shared-218200
      containers:
        - name: stuff-experience-frontend
          image: gcr.io/shared-218200/nz.stuff/experience/experience-frontend:${project.version}
          ports:
            - containerPort: 4000
          resources:
            limits:
              # Roll out OOMKilled fix
              #              cpu: ${quota-limits.smallCpu}
              #              memory: ${quota-limits.smallMemory}
              cpu: 600m
              memory: 1Gi
            requests:
              cpu: 400m
              memory: 650Mi
          volumeMounts:
            - mountPath: /etc/${project.artifactId}/
              name: config-v${parsedVersion.majorVersion}
              readOnly: true
          readinessProbe:
            httpGet:
              path: "/health/light"
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: "/health/light"
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: config-v${parsedVersion.majorVersion}
          configMap:
            name: ${project.artifactId}-config-v${parsedVersion.majorVersion}
