src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${project.artifactId}
    run-source: spade
  name: ${project.artifactId}
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    app: ${project.artifactId}
