src/main/kubernetes/ingress-public.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${environment}
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/ssl-redirect: 'true'
  name: ${project.artifactId}
spec:
  tls:
    - secretName: experience.${environmentDomain}.tls
      hosts:
        - experience.${environmentDomain}
        - ${publicDomain1}
        - ${publicDomain2}
  rules:
    - host: experience.${environmentDomain}
      http:
        paths:
          - path: /health/light
            backend:
              serviceName: ${project.artifactId}
              servicePort: 80
          - path: /health/full
            backend:
              serviceName: ${project.artifactId}
              servicePort: 80
    - host: ${publicDomain1}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${project.artifactId}
              servicePort: 80
    - host: ${publicDomain2}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${project.artifactId}
              servicePort: 80
