src/main/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${environment}
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/ssl-redirect: 'true'
  name: ${project.artifactId}
spec:
  tls:
  - secretName: experience.${environmentDomain}.tls
    hosts:
    - experience.${environmentDomain}
  rules:
  - host: experience.${environmentDomain}
    http:
      paths:
      - backend:
          serviceName: ${project.artifactId}
          servicePort: 80
        path: /
